# cwipc_realsense2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  multiFrame.cpp  multi_camera_capture.cpp  readme.md
apps/cwipc_grab/: CMakeLists.txt  cwipc_grab.cpp
apps/cwipc_multigrab/: CMakeLists.txt  cwipc_multigrab.cpp
apps/cwipc_realsense2_grab/: CMakeLists.txt  cwipc_realsense2_grab.cpp
apps/cwipc_realsense2_install_check/: CMakeLists.txt  cwipc_realsense2_install_check.cpp
apps/cwipc_realsense2_playback_grab/: CMakeLists.txt  cwipc_realsense2_playback_grab.cpp
apps/cwipc_renderer/: CMakeLists.txt  cwipc_renderer.cpp
apps/cwipc_rs2grab/: CMakeLists.txt  cwipc_rs2grab.cpp
apps/cwipc_rs2multigrab/: CMakeLists.txt  cwipc_rs2multigrab.cpp
apps/cwipc_rs2offline/: CMakeLists.txt  cwipc_rs2offline.cpp
apps/cwipc_rs2playback_grab/: CMakeLists.txt  cwipc_rs2playback_grab.cpp
apps/pcl_align/: CMakeLists.txt  pcl_align.cpp  window_util.cpp
apps/pcl_renderer/: CMakeLists.txt  pcl_renderer.cpp  window_util.cpp
include/cwipc_realsense/: api.h  defs.h  multiFrame.hpp  utils.h  window_util.hpp
include/cwipc_realsense2/: MFCamera.hpp  MFCapture.hpp  MFOffline.hpp  MFOfflineCamera.hpp  RS2Camera.hpp  RS2Capture.hpp  RS2Offline.hpp  RS2OfflineCamera.hpp  api.h  defs.h  multiFrame.hpp  offlinedefs.h  utils.h  window_util.hpp
include/cwipc_realsense2/private/: RS2Camera.hpp  RS2Capture.hpp  RS2Config.hpp  RS2Offline.hpp  RS2OfflineCamera.hpp  RS2PlaybackCamera.hpp  RS2PlaybackCapture.hpp  defs.h  offlinedefs.h  utils.h  window_util.hpp
python/: CMakeLists.txt  certh2config.py  cwipc_realsense2_rs2offline.py  cwipc_rs2offlinedir.py  cwipc_rs2offlinepy.py  pyproject.toml  setup.py  test_cwipc_realsense2.py
python/_cwipc_realsense2/: __init__.py
python/_cwipc_realsense2/scripts/: cwipc_certh2config.py  cwipc_rs2offlinepy.py
python/_cwipc_realsense2/scripts/cwipc_rs2calibrate/: __init__.py  __main__.py  calibrator.py  cameraconfig.py  filegrabber.py  livegrabber.py  pointcloud.py  ui.py
python/certh2config/: certh2config.py  xx.xml
renderer/: CMakeLists.txt  pcl_align.cpp  pcl_align.hpp  pcl_renderer.cpp  pcl_renderer.hpp  window_util.cpp  window_util.hpp
src/: CMakeLists.txt  MFCamera.cpp  MFCapture.cpp  MFOffline.cpp  MFOfflineCamera.cpp  RS2BaseCamera.cpp  RS2BaseCamera.hpp  RS2BaseCapture.cpp  RS2BaseCapture.hpp  RS2Camera.cpp  RS2Camera.hpp  RS2Capture.cpp  RS2Capture.hpp  RS2Config.cpp  RS2Config.hpp  RS2Offline.cpp  RS2OfflineCamera.cpp  RS2PlaybackCamera.cpp  RS2PlaybackCamera.hpp  RS2PlaybackCapture.cpp  RS2PlaybackCapture.hpp  cmake_install.cmake  cwipc_pcl_additions.cpp  cwipc_realsense2.cpp  defs.h  example.hpp  multiFrame.cpp  multiFrame.hpp  multi_camera_capture.cpp  pcl_renderer.cpp  pcl_renderer.hpp  utils.cpp  utils.h
tests/: CMakeLists.txt
tests/fixtures/input/: offlineconfig.xml
tests/fixtures/input/realsense2_recording/: cameraconfig.json
tests/fixtures/input/recording/: cameraconfig.json  csv_Depth_1703695509622.44335937500000.csv  csv_Depth_1703695509790.68237304687500.csv  csv_Depth_1703695509958.92236328125000.csv  csv_Depth_1703695510127.16162109375000.csv  csv_Depth_1703695510295.40185546875000.csv  csv_Depth_1703695510463.64233398437500.csv  csv_Depth_1703695510631.88256835937500.csv  csv_Depth_1703695510800.12304687500000.csv  csv_Depth_1703695510968.35668945312500.csv  csv_Depth_1703695511136.59033203125000.csv  csv_Depth_1703695511304.82397460937500.csv  csv_Depth_1703695511473.05737304687500.csv  csv_Depth_1703695511641.28979492187500.csv  csv_Depth_1703695511809.52343750000000.csv  csv_Depth_1703695511977.75341796875000.csv  csv_Depth_1703695512145.98339843750000.csv  csv_Depth_1703695512314.21289062500000.csv  csv_Depth_1703695512482.44238281250000.csv  csv_Depth_1703695512650.67138671875000.csv  csv_Depth_1703695512818.90063476562500.csv  csv_Depth_1703695512987.13891601562500.csv  csv_Depth_1703695513155.37622070312500.csv  csv_Depth_1703695513323.61450195312500.csv  csv_Depth_1703695513491.85278320312500.csv  csv_Depth_1703695513660.09130859375000.csv  csv_Depth_1703695513828.32983398437500.csv  csv_Depth_1703695513996.56420898437500.csv  csv_Depth_1703695514164.79858398437500.csv  csv_Depth_1703695514333.03271484375000.csv  csv_Depth_1703695514501.26684570312500.csv  csv_Depth_1703695514669.50000000000000.csv  csv_Depth_1703695514837.73413085937500.csv  csv_Depth_1703695515005.97460937500000.csv  csv_Depth_1703695515174.21508789062500.csv  csv_Depth_1703695515342.45581054687500.csv  csv_Depth_1703695515510.69653320312500.csv  csv_Depth_1703695515678.93750000000000.csv  csv_Depth_1703695515847.17822265625000.csv  csv_Depth_1703695516015.41259765625000.csv  (+61 more)
